@@ -3,15 +3,14 @@ package edu.sabanciuniv.cs308.backend.service;
 import edu.sabanciuniv.cs308.backend.dto.WishlistResponseDTO;
 import edu.sabanciuniv.cs308.backend.entity.ProductEntity;
 import edu.sabanciuniv.cs308.backend.entity.WishlistEntity;
-import edu.sabanciuniv.cs308.backend.repository.WishlistRepository;
 import edu.sabanciuniv.cs308.backend.repository.ProductRepository;
-
+import edu.sabanciuniv.cs308.backend.repository.WishlistRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -19,26 +18,19 @@ import java.util.stream.StreamSupport;
 public class WishlistService {
 
     private final WishlistRepository wishlistRepository;
-
-    // Eğer ProductRepository'in varsa buraya ekleyip doğrulama yapacağız
-    // private final ProductRepository productRepository;
-
-    private final ProductService productService; // Projede varsa ürünleri çekmek için kullanabiliriz
     private final ProductRepository productRepository;
 
-
     public WishlistResponseDTO getWishlist(String userId) {
-        WishlistEntity w = wishlistRepository.findByUserId(userId)
-                .orElseGet(() -> wishlistRepository.save(newWishlist(userId)));
-
+        WishlistEntity w = findOrCreateAndDedupWishlist(userId);
         return toResponse(w);
     }
 
     public WishlistResponseDTO addItem(String userId, String productId) {
-        WishlistEntity w = wishlistRepository.findByUserId(userId)
-                .orElseGet(() -> newWishlist(userId));
+        WishlistEntity w = findOrCreateAndDedupWishlist(userId);
 
-        w.getProductIds().add(productId);
+        Set<String> ids = ensureProductIds(w);
+        ids.add(productId); // Set prevents duplicates
+
         w.setUpdatedAt(Instant.now());
         w = wishlistRepository.save(w);
 
@@ -46,10 +38,11 @@ public class WishlistService {
     }
 
     public WishlistResponseDTO removeItem(String userId, String productId) {
-        WishlistEntity w = wishlistRepository.findByUserId(userId)
-                .orElseGet(() -> wishlistRepository.save(newWishlist(userId)));
+        WishlistEntity w = findOrCreateAndDedupWishlist(userId);
 
-        w.getProductIds().remove(productId);
+        Set<String> ids = ensureProductIds(w);
+        ids.remove(productId);
+
         w.setUpdatedAt(Instant.now());
         w = wishlistRepository.save(w);
 
@@ -57,14 +50,68 @@ public class WishlistService {
     }
 
     public WishlistResponseDTO clear(String userId) {
-        WishlistEntity w = wishlistRepository.findByUserId(userId)
-                .orElseGet(() -> wishlistRepository.save(newWishlist(userId)));
+        WishlistEntity w = findOrCreateAndDedupWishlist(userId);
 
-        w.getProductIds().clear();
+        Set<String> ids = ensureProductIds(w);
+        ids.clear();
+
         w.setUpdatedAt(Instant.now());
         w = wishlistRepository.save(w);
 
         return toResponse(w);
+    }
+
+    // -------------------- helpers --------------------
+
+    /**
+     * FIXES your current 500:
+     * If DB contains multiple wishlists for same userId,
+     * Spring used to throw IncorrectResultSizeDataAccessException.
+     *
+     * Here we:
+     *  - fetch all docs
+     *  - choose one "primary"
+     *  - merge productIds from all duplicates into primary
+     *  - delete extras
+     *  - save primary
+     */
+    private WishlistEntity findOrCreateAndDedupWishlist(String userId) {
+        List<WishlistEntity> all = wishlistRepository.findAllByUserId(userId);
+
+        if (all == null || all.isEmpty()) {
+            return wishlistRepository.save(newWishlist(userId));
+        }
+
+        // Choose a primary wishlist:
+        // Prefer most recently updated, else just first.
+        WishlistEntity primary = all.stream()
+                .max(Comparator.comparing(w -> {
+                    Instant t = w.getUpdatedAt();
+                    return t != null ? t : Instant.EPOCH;
+                }))
+                .orElse(all.get(0));
+
+        // Merge all productIds into primary (null-safe)
+        Set<String> merged = new LinkedHashSet<>();
+        for (WishlistEntity w : all) {
+            if (w == null) continue;
+            Set<String> ids = w.getProductIds();
+            if (ids != null) merged.addAll(ids);
+        }
+
+        primary.setProductIds(merged);
+        primary.setUpdatedAt(Instant.now());
+
+        // Delete duplicates (all except primary)
+        for (WishlistEntity w : all) {
+            if (w == null) continue;
+            if (!Objects.equals(w.getId(), primary.getId())) {
+                wishlistRepository.delete(w);
+            }
+        }
+
+        // Save merged primary
+        return wishlistRepository.save(primary);
     }
 
     private WishlistEntity newWishlist(String userId) {
@@ -72,28 +119,29 @@ public class WishlistService {
         w.setUserId(userId);
         w.setCreatedAt(Instant.now());
         w.setUpdatedAt(Instant.now());
+        w.setProductIds(new LinkedHashSet<>()); // IMPORTANT: init Set
         return w;
     }
 
+    private Set<String> ensureProductIds(WishlistEntity w) {
+        if (w.getProductIds() == null) {
+            w.setProductIds(new LinkedHashSet<>());
+        }
+        return w.getProductIds();
+    }
+
     private WishlistResponseDTO toResponse(WishlistEntity w) {
-        List<String> ids = new ArrayList<>(w.getProductIds());
+        Set<String> idSet = ensureProductIds(w);
 
-        // Ürün detaylarını dönmek istersen:
-        // productService.getProducts(null) gibi değil,
-        // elinde "ids ile fetch" yoksa şimdilik boş dön.
+        // Your DTO expects List<String> (based on earlier file),
+        // so convert Set -> List for JSON.
+        List<String> ids = new ArrayList<>(idSet);
+
         List<ProductEntity> products = ids.isEmpty()
-                ? List.of()
-                : streamToList(productRepository.findAllById(ids));
-
-
-
-        // Eğer ProductService içinde ids ile fetch edebiliyorsan burada doldur:
-        // products = productService.getProductsByIds(ids);
+                ? Collections.emptyList()
+                : StreamSupport.stream(productRepository.findAllById(ids).spliterator(), false)
+                .collect(Collectors.toList());
 
         return new WishlistResponseDTO(ids, ids.size(), products);
     }
-    private List<ProductEntity> streamToList(Iterable<ProductEntity> it) {
-        return StreamSupport.stream(it.spliterator(), false).toList();
-    }
-
 }
